--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,10 +31,10 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./cmd
+      run: go build ./cmd -v .
 
     - name: Test
-      run: go test -v ./cmd
+      run: go test  ./cmd -v .
     - name: go-cross-build
       uses: thatisuday/go-cross-build@v1
       with:
